--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Snake</title>
+    <meta charset="utf-8" />
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/addons/p5.sound.min.js"></script>
+    <script src="sketch.js"></script>
+    <script src="snake.js"></script>
+  </head>
 
-<head>
-  <script src="node_modules\p5\lib\p5.js"></script>
-  <script src="node_modules\p5\lib\addons\p5.sound.js"></script>
-  <link rel=" stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8"></head><body><script src="sketch.js">
-  </script>
-  <script src="snake.js"></script>
+  <style>
+    html,
+    body {
+      height: 90vh;
+      margin: 0;
+      padding: 0;
+      background-color: #121212;
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      align-items: center;
+      color: #a8a7a7;
+    }
 
+    canvas {
+      display: block;
+    }
 
+    a {
+      text-decoration: none;
+      color: #5b28b9;
+    }
+    a:visited {
+      color: #5b28b9;
+    }
+    a:hover {
+      color: #6945ec;
+    }
+  </style>
+
+  <body>
+    <p style="order: 2">Controls: Arrow Keys</p>
+    <a href="http://github.com/ldaros" style="order: 3">© 2021 Luan Daros</a>
   </body>
-
 </html>
